# mdtree

./: .gitattributes  .gitignore  .mdtree  COMMERCIAL-LICENSE.md  Cargo.toml  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  build-and-install.sh  reordering-tests.md  rustfmt.toml
crates/mdtree-cli/: Cargo.toml
crates/mdtree-cli/src/: lib.rs  main.rs
crates/mdtree-cli/tests/: browse_ui.rs  collection_pagination.rs  mutation_batches.rs  workspace_resolution.rs
crates/mdtree-core/: Cargo.toml
crates/mdtree-core/examples/: generate_benchmark.rs
crates/mdtree-core/src/: benchmark_fixture.rs  context.rs  error.rs  example_fixtures.rs  fixture.rs  hashing.rs  identity.rs  lib.rs  metadata.rs  node.rs  pagination.rs  ports.rs  projection.rs  providers.rs  records.rs  revision_diff.rs  scale_fixture.rs  search.rs  slug_generation.rs  snapshot.rs  subtree_diff.rs
crates/mdtree-markdown/: Cargo.toml
crates/mdtree-markdown/examples/: generate_northstar_platform.rs
crates/mdtree-markdown/src/: derived.rs  frontmatter.rs  lib.rs  links.rs  sections.rs  snapshot.rs
crates/mdtree-mcp/: Cargo.toml
crates/mdtree-mcp/src/: lib.rs  main.rs  mutation.rs  switching.rs
crates/mdtree-mcp/tests/: stdio.rs
crates/mdtree-sqlite/: Cargo.toml
crates/mdtree-sqlite/benches/: services.rs
crates/mdtree-sqlite/examples/: evaluate_destination.rs  generate_example_workspaces.rs  measure_resources.rs
crates/mdtree-sqlite/migrations/: 0001_workspace_format.sql  0002_canonical_nodes.sql  0003_derived_and_history.sql  0004_section_fts.sql  0005_mutation_receipts.sql  0006_workspace_revision.sql
crates/mdtree-sqlite/src/: connection.rs  context.rs  lib.rs  maintenance.rs  migrations.rs  mutation_assembly.rs  projection.rs  search.rs  snapshot.rs  store.rs  test_support.rs  workspace.rs
crates/mdtree-sqlite/tests/: example_workspaces.rs  northstar_platform.rs
crates/mdtree-web/: Cargo.toml  package-lock.json  package.json
crates/mdtree-web/assets/: app.js  index.html  style.css  tailwind.input.css
crates/mdtree-web/src/: api.rs  assets.rs  change_hub.rs  commands.rs  lib.rs  lifecycle.rs  markdown.rs  search.rs  security.rs  state.rs  ws.rs
examples/: README.md  developer-workspace.mdtree  mdtree-project.mdtree  northstar-platform.snapshot.json
examples/northstar-platform-markdown/: node.md  workspace.yaml
examples/northstar-platform-markdown/0000000000-architecture--01JZ8Q5CWPN8T7KPN5A1V9B6XN/: node.md
examples/northstar-platform-markdown/0000000000-architecture--01JZ8Q5CWPN8T7KPN5A1V9B6XN/0000000000-architecture-decisions--01JZ8Q5CWPN8T7KPN5A1V9B6XP/: node.md
examples/northstar-platform-markdown/0000000001-services--01JZ8Q5CWPN8T7KPN5A1V9B6XT/: node.md
examples/northstar-platform-markdown/0000000001-services--01JZ8Q5CWPN8T7KPN5A1V9B6XT/0000000000-service-catalog--01JZ8Q5CWPN8T7KPN5A1V9B6XV/: node.md
scripts/: package-release.sh  smoke-docs.sh  verify-package.sh
