[workspace]
members = [
    "crates/mdtree-cli",
    "crates/mdtree-core",
    "crates/mdtree-markdown",
    "crates/mdtree-mcp",
    "crates/mdtree-sqlite",
    "crates/mdtree-web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license-file = "LICENSE"
repository = "https://github.com/sidnaZ/mdtree-ui"

[workspace.dependencies]
mdtree-core = { path = "crates/mdtree-core", version = "0.1.0" }
mdtree-markdown = { path = "crates/mdtree-markdown", version = "0.1.0" }
mdtree-sqlite = { path = "crates/mdtree-sqlite", version = "0.1.0" }
mdtree-web = { path = "crates/mdtree-web", version = "0.1.0" }
ammonia = "4.1.3"
anyhow = "1.0.103"
axum = "0.8.7"
blake3 = "1.8.5"
clap = "4.6.1"
clap_complete = "4.6.7"
criterion = "0.7.0"
crossterm = "0.29.0"
futures-util = "0.3.32"
pulldown-cmark = "0.13.4"
rand = "0.10.2"
rmcp = "2.2.0"
rusqlite = { version = "0.40.1", features = ["backup", "bundled"] }
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tempfile = "3.23.0"
tokio = "1.52.3"
tokio-tungstenite = "0.29.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.20"
ulid = "2.0.1"
unicode-normalization = "0.1.25"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.test]
debug = 1
