[package]
name = "mdtree-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Command-line interface for MDTree"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
clap_complete.workspace = true
crossterm.workspace = true
mdtree-core.workspace = true
mdtree-sqlite.workspace = true
mdtree-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
futures-util.workspace = true
mdtree-sqlite = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite.workspace = true

[[bin]]
name = "mdtree"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
