[package]
name = "mdtree-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Model Context Protocol adapter for MDTree"

[dependencies]
anyhow.workspace = true
mdtree-core.workspace = true
mdtree-markdown.workspace = true
mdtree-sqlite.workspace = true
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-io"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "process", "rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
mdtree-sqlite = { workspace = true, features = ["test-support"] }
tempfile.workspace = true

[[bin]]
name = "mdtree-mcp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
