[package]
name = "mdtree-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
description = "SQLite persistence adapter for MDTree"

[features]
test-support = ["rusqlite/hooks"]

[lib]
path = "src/lib.rs"

[dependencies]
mdtree-core.workspace = true
mdtree-markdown.workspace = true
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[dev-dependencies]
criterion.workspace = true
rusqlite = { workspace = true, features = ["hooks"] }

[[bench]]
name = "services"
harness = false
